--- a/index.html
+++ b/index.html
@@ -4,11 +4,90 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/main.css" text="text/css" >
     <title>미디어 클라우드</title>
   </head>
   <body>
     <div class="wrap">
-      <div></div>
+      <header class="header">
+        <h1 class="header-title">
+          <span style="color:#1960ae;">리테일 미디어</span>와 함께
+          <p>새로운 가능성을 만나세요</p>
+          <p class="header-sub-title">최적의 광고 솔루션을 통해 더 많은 잠재고객을 확보하세요.</p>
+        </h1>
+      </header>
+      <div class="id-box">
+        <ul class="id-box-center">
+          <li class="log-box">
+            <input type="text" placeholder="아이디 또는 이메일">
+          </li>
+          <li class="password-box">
+            <input type="text" placeholder="비밀번호">
+          </li>
+          <li class="log-in">
+            <a href="javascript:void(0)">
+              로그인
+            </a>
+          </li>
+          <li class="join">
+            <a href="javascript:void(0)">
+              회원가입
+            </a>
+          </li>
+          <li class="finder">
+            <a href="javascript:void(0)">
+              아이디/비밀번호 찾기
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="product-introduce">
+        <h2 class="product-title">상품 소개</h2>
+        <ul class="product-box">
+          <li>
+            <img src="" alt="">
+          </li>
+          <li>
+            <img src="" alt="">
+          </li>
+          <li>
+            <img src="" alt="">
+          </li>
+        </ul>
+        <div class="product-btn">
+          <a href="javascript:void(0)">
+            단가표 다운
+            <img src="" alt="product_btn">
+          </a>
+        </div>
+      </div>
+      <div class="process">
+        <h2 class="process-title">광고집행 프로세스</h2>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="media-banner">
+        <h2 class="banner-title">왜 리테일 미디어 광고인가요?</h2>
+        <ul class="banner-inner">
+          <li>
+            <p class="banner-sub-title">광고 운영 가이드</p>
+            <p class="banner-about">광고 집행을 위한 가이드와 소재 제작 가이드를 안내합니다.</p>
+          </li>
+          <li>
+            <p class="banner-sub-title">비즈니스 스쿨</p>
+            <p class="banner-about">광고 집행 기초부터 운영전략까지 온라인 비즈니스 교육입니다.</p>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
